blur behind navbar, solve hamburger collapse, mouseenter navbar color change, custom alert import and styling, responsive alert for construct section window size, footer styling and responsive borders for small screens, adjust scrollbars for galleries, add more dogs, set autoscroll for galleries to highlight scrollbars and alternate display without preventing user accessibility, comment all of JS file. 5 hours.

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 /* Scrollbar */
 ::-webkit-scrollbar {
 	width: 10px;
-    height: 10px;
+    height: 15px;
     scrollbar-width: 10px;
     scrollbar-color: orange, #f3f3f3;
 }
@@ -26,9 +26,29 @@
 	background: #f3f3f3;
 }
 
+/* Custom alert styling */
+.swal-overlay {
+    background-color: rgb(255, 165, 0, 0.25);
+}
+
+.swal-modal {
+    background-color: #27222e;
+    border-radius: 5px;
+    border: 2px solid #f3f3f3;
+}
+
+.swal-text {
+    color: #f3f3f3;
+}
+
+.swal-button--confirm {
+    background-color: orange;
+}
+
 #navMain {
-    background-color: rgb(255, 165, 0, 0.85);
+    background-color: rgb(255, 165, 0, 0.25);
     align-items: center;
+    backdrop-filter: blur(8px);
 	/* border: 1px solid black; */
 }
 
@@ -213,20 +233,12 @@ body {
 
 .gallery {
 	/* margin-bottom: 250px; */
-    border: 2px solid orange;
+    border: 4px solid orange;
     border-radius: 5px;
 	margin: 75px 0;
 	overflow-x: scroll;
 	overflow-y: hidden;
 	white-space: nowrap;
-}
-
-#galleryOne {
-    scroll-padding-top: 200px;
-}
-
-#scrollOne {
-    
 }
 
 .sideScroll {
@@ -235,13 +247,19 @@ body {
 }
 
 .galleryDogs {
-	margin: 1% 5%;
+	margin: 1% 4%;
     border: 2px solid white;
     border-radius: 5px;
 }
 
 
 /* BUILD PAGE */
+
+/* PREVENT ON SMALLER SCREENS */
+@media screen and (max-width: 581px) {
+
+}
+
 #buildBody {
     display: flex;
 	justify-content: center;
@@ -284,9 +302,10 @@ body {
 
 #footBox {
 	display: inline-block;
-	border: 2px solid black;
-	margin-bottom: 15px;
+	border: 2px solid #f3f3f3;
+	margin: 15px 0 5px 0;
 	background-color: #27222e;
+    border-radius: 5px;
 }
 
 .footLinks {
@@ -299,4 +318,10 @@ body {
 .footLinks:hover {
     text-decoration: none;
     color:#f3f3f3;
+}
+
+@media screen and (max-width: 575px) {
+    .footDivs {
+        border: 2px solid #f3f3f3;
+    }
 }
